Display confirmation dialog only once when files in archive are modified

Since QFileSystemWatcher::fileChanged is emitted everytime flush()
is called on a file, slotWatchedFileModified gets called multiple times,
especially for large files. (see https://bugreports.qt.io/browse/QTBUG-8244)

If no new fileChanged signal is emitted 200ms after the last one,
we interpret that as "the file has been fully written"

200ms was arbitrarily chosen to be a balance between a long enough flush interval
and "instant" feedback to the user, but it can be fine tuned later.

BUG: 382606